// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpaceRowContent /> snapshot checks divider dot position in compact mode 1`] = `
<SpaceRowContent
  firstLine="firstLine"
  isCompact={true}
  secondLine="testteam"
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-row"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-row"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        >
          firstLine
        </p>
      </Text>
      <DividerDot
        data-test="compact-mode-divider-dot"
      >
        <div
          className="md-divider-dot-wrapper"
        />
      </DividerDot>
      <Text
        aria-label="testteam"
        data-test="list-item-second-line"
        style={
          Object {
            "color": "var(--mds-color-theme-text-teamdefault-normal)",
          }
        }
        type="body-secondary"
      >
        <small
          aria-label="testteam"
          className="md-text-wrapper"
          data-test="list-item-second-line"
          data-type="body-secondary"
          style={
            Object {
              "color": "var(--mds-color-theme-text-teamdefault-normal)",
            }
          }
        >
          <SecondLineElement
            key="second-line-item-0"
            showDividerDot={false}
          >
            testteam
          </SecondLineElement>
        </small>
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    />
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot 1`] = `
<SpaceRowContent>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    />
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with action 1`] = `
<SpaceRowContent
  action={
    <p>
      action
    </p>
  }
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    >
      <p>
        action
      </p>
    </div>
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with firstLine 1`] = `
<SpaceRowContent
  firstLine="firstLine"
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        >
          firstLine
        </p>
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    />
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with isAlert 1`] = `
<SpaceRowContent
  isAlert={true}
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    >
      <Icon
        fillColor="var(--mds-color-theme-text-primary-normal)"
        name="alert"
        scale={14}
        strokeColor="none"
        weight="bold"
      >
        <div
          aria-hidden="true"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-autoscale={false}
            data-scale={14}
            data-test="alert"
            height="100%"
            style={
              Object {
                "fill": "var(--mds-color-theme-text-primary-normal)",
                "stroke": "none",
              }
            }
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with isAlertMuted 1`] = `
<SpaceRowContent
  isAlertMuted={true}
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    >
      <Icon
        fillColor="var(--mds-color-theme-text-primary-normal)"
        name="alert-muted"
        scale={14}
        strokeColor="none"
        weight="bold"
      >
        <div
          aria-hidden="true"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-autoscale={false}
            data-scale={14}
            data-test="alert-muted"
            height="100%"
            style={
              Object {
                "fill": "var(--mds-color-theme-text-primary-normal)",
                "stroke": "none",
              }
            }
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with isDisabled 1`] = `
<SpaceRowContent
  isDisabled={true}
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={true}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={true}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    />
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with isEnterRoom 1`] = `
<SpaceRowContent
  isEnterRoom={true}
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    >
      <Icon
        fillColor="var(--mds-color-theme-control-active-normal)"
        name="enter-room"
        scale={14}
        strokeColor="none"
        weight="bold"
      >
        <div
          aria-hidden="true"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-autoscale={false}
            data-scale={14}
            data-test="enter-room"
            height="100%"
            style={
              Object {
                "fill": "var(--mds-color-theme-control-active-normal)",
                "stroke": "none",
              }
            }
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with isError 1`] = `
<SpaceRowContent
  isError={true}
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    >
      <Icon
        fillColor="var(--mds-color-theme-text-error-normal)"
        name="priority-circle"
        scale={14}
        strokeColor="none"
        weight="filled"
      >
        <div
          aria-hidden="true"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-autoscale={false}
            data-scale={14}
            data-test="priority-circle"
            height="100%"
            style={
              Object {
                "fill": "var(--mds-color-theme-text-error-normal)",
                "stroke": "none",
              }
            }
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with isMention 1`] = `
<SpaceRowContent
  isMention={true}
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    >
      <Icon
        fillColor="var(--mds-color-theme-control-active-normal)"
        name="mention"
        scale={14}
        strokeColor="none"
        weight="bold"
      >
        <div
          aria-hidden="true"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-autoscale={false}
            data-scale={14}
            data-test="mention"
            height="100%"
            style={
              Object {
                "fill": "var(--mds-color-theme-control-active-normal)",
                "stroke": "none",
              }
            }
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with isSelected 1`] = `
<SpaceRowContent
  isSelected={true}
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    />
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with isSelected and draft 1`] = `
<SpaceRowContent
  isDraft={true}
  isSelected={false}
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    >
      <Icon
        fillColor="var(--mds-color-theme-text-primary-normal)"
        name="draft-indicator"
        scale={14}
        strokeColor="none"
        weight="bold"
      >
        <div
          aria-hidden="true"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-autoscale={false}
            data-scale={14}
            data-test="draft-indicator"
            height="100%"
            style={
              Object {
                "fill": "var(--mds-color-theme-text-primary-normal)",
                "stroke": "none",
              }
            }
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with isUnread 1`] = `
<SpaceRowContent
  isUnread={true}
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    >
      <Icon
        fillColor="var(--mds-color-theme-control-active-normal)"
        name="unread"
        scale={14}
        strokeColor="none"
        weight="bold"
      >
        <div
          aria-hidden="true"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-autoscale={false}
            data-scale={14}
            data-test="unread"
            height="100%"
            style={
              Object {
                "fill": "var(--mds-color-theme-control-active-normal)",
                "stroke": "none",
              }
            }
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with multiple string secondLine 1`] = `
<SpaceRowContent
  secondLine={
    Array [
      "one",
      "two",
      "three",
    ]
  }
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
      <Text
        aria-label="one, two, three"
        data-test="list-item-second-line"
        style={
          Object {
            "color": "var(--mds-color-theme-text-teamdefault-normal)",
          }
        }
        type="body-secondary"
      >
        <small
          aria-label="one, two, three"
          className="md-text-wrapper"
          data-test="list-item-second-line"
          data-type="body-secondary"
          style={
            Object {
              "color": "var(--mds-color-theme-text-teamdefault-normal)",
            }
          }
        >
          <SecondLineElement
            key="second-line-item-0"
            showDividerDot={false}
          >
            one
          </SecondLineElement>
          <SecondLineElement
            key="second-line-item-1"
            showDividerDot={true}
          >
            <DividerDot
              data-test="multiple-string-second-line-divider-dot"
            >
              <div
                className="md-divider-dot-wrapper"
              />
            </DividerDot>
            two
          </SecondLineElement>
          <SecondLineElement
            key="second-line-item-2"
            showDividerDot={true}
          >
            <DividerDot
              data-test="multiple-string-second-line-divider-dot"
            >
              <div
                className="md-divider-dot-wrapper"
              />
            </DividerDot>
            three
          </SecondLineElement>
        </small>
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    />
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with secondLine 1`] = `
<SpaceRowContent
  secondLine="secondLine"
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
      <Text
        aria-label="secondLine"
        data-test="list-item-second-line"
        style={
          Object {
            "color": "var(--mds-color-theme-text-teamdefault-normal)",
          }
        }
        type="body-secondary"
      >
        <small
          aria-label="secondLine"
          className="md-text-wrapper"
          data-test="list-item-second-line"
          data-type="body-secondary"
          style={
            Object {
              "color": "var(--mds-color-theme-text-teamdefault-normal)",
            }
          }
        >
          <SecondLineElement
            key="second-line-item-0"
            showDividerDot={false}
          >
            secondLine
          </SecondLineElement>
        </small>
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    />
  </ListItemBaseSection>
</SpaceRowContent>
`;

exports[`<SpaceRowContent /> snapshot should match snapshot with teamColor 1`] = `
<SpaceRowContent
  teamColor="cobalt"
>
  <ListItemBaseSection
    position="start"
  >
    <div
      data-position="start"
    />
  </ListItemBaseSection>
  <ListItemBaseSection
    className="md-space-row-content-text-wrapper text-column"
    position="middle"
  >
    <div
      className="md-space-row-content-text-wrapper text-column"
      data-position="middle"
    >
      <Text
        data-disabled={false}
        data-test="list-item-first-line"
        type="body-primary"
      >
        <p
          className="md-text-wrapper"
          data-disabled={false}
          data-test="list-item-first-line"
          data-type="body-primary"
        />
      </Text>
    </div>
  </ListItemBaseSection>
  <ListItemBaseSection
    position="end"
  >
    <div
      data-position="end"
    />
  </ListItemBaseSection>
</SpaceRowContent>
`;
